syntax = "proto3";
package auth;

option go_package = "github.com/nidea1/go-gavel/proto/auth;auth";

message SignupRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
}

message SignupResponse {
    bool status = 1;
    string message = 2;
    optional Tokens data = 3;
    optional Errors errors = 4;
}

message LoginRequest {
    string email = 1;
    string password = 2;
    bool remember_me = 3;
}

message LoginResponse {
    bool status = 1;
    string message = 2;
    optional Tokens data = 3;
    optional Errors errors = 4;
}

message LogoutRequest {
    string access_token = 1;
}

message LogoutResponse {
    bool status = 1;
    string message = 2;
    optional Errors errors = 3;
}

message Tokens {
    string access_token = 1;
    string refresh_token = 2;
    uint64 expires_at = 3;
}

message SingleValidationError {
    string field = 1;
    string code = 2;
    string message = 3;
}

message Errors {
    repeated SingleValidationError errors = 1;
}

service AuthService {
    rpc Signup(SignupRequest)   returns (SignupResponse);
    rpc Login(LoginRequest)     returns (LoginResponse);
    rpc Logout(LogoutRequest)   returns (LogoutResponse);
}